--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "static-favicon": "latest",
-    "express-session": "latest",
-    "formidable": "latest",
+    "express-session": "1.14.2",
+    "express-formidable": "1.0.0",
     "mysql": "latest",
     "grunt": "latest",
     "grunt-contrib-uglify": "latest",
     "mongodb": "latest",
-    "connect-flash": "latest",
+    "connect-flash": "0.1.1",
     "markdown": "0.5.0",
-    "connect-mongo": "latest",
+    "connect-mongo": "1.3.2",
     "multer": "0.1.6"
   },
   "devDependencies": {
